gradient descent implemented for mnist.

--- a/Optimization.ipynb
+++ b/Optimization.ipynb
@@ -15,130 +15,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 840,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sigmoid function \n",
-    "# Input: arbitrary vector \n",
-    "def sigmoid(x):\n",
+    "def sigmoid(x): \n",
     "    return 1.0 / (1.0 + np.exp(-x))\n",
     "\n",
-    "# Logistic regression prediction \n",
-    "# Input: parameters, example \n",
-    "def logRegPrediction(w, x): \n",
-    "    return sigmoid(np.dot(x,w))\n",
+    "def logPredict(X, w): \n",
+    "    return sigmoid(np.dot(X,w))\n",
     "\n",
-    "# Logsistic regression NLL cost function \n",
-    "def logRegCost(w, x, y): \n",
-    "    predicted = logRegPrediction(w,x)\n",
-    "    print(np.amin(predicted))\n",
-    "    print(np.amax(predicted))\n",
-    "    posCost = - y * np.log(predicted)\n",
-    "    negCost = - (1.0 - y) * np.log(1.0 - predicted)\n",
-    "    totCost = posCost + negCost \n",
-    "    return np.sum(totCost) / y.size \n",
+    "def logAvgCost(X, y, w):\n",
+    "    predict = logPredict(X, w)\n",
+    "    cost = y * np.log(predict) + (1.0 - y) * np.log(1.0 - predict)\n",
+    "    cost = - cost \n",
+    "    return cost.sum() / y.shape[0]\n",
     "\n",
-    "# Logistic regression cost gradient \n",
-    "def logRegCostGrad(w, x, y):\n",
-    "    predicted = logRegPrediction(w,y)\n",
-    "    return np.dot(x.t, predicted - y)\n",
+    "def logAvgGrad(X, y, w):\n",
+    "    predict = logPredict(X, w)\n",
+    "    return np.dot(X.T, predict - y) / y.shape[0]\n",
     "\n",
-    "# Logistic regression weight update \n",
-    "def logRegUpdate(w, x, y, learnRate):\n",
-    "    grad = logRegCostGrad(w, x, y) / len(y)\n",
-    "    w -= lr * grad\n",
-    "    return w \n",
+    "def updateWeightsGD(X, y, w, lr):\n",
+    "    gradient = logAvgGrad(X, y, w)\n",
+    "    step = lr * gradient \n",
+    "    return w - gradient \n",
     "\n",
-    "# Training \n",
-    "def logRegTrain(w, x, y, numIter, logFreq, learnRate): \n",
+    "def trainGD(X, y, w, lr, numIters, logFreq):\n",
     "    costs = [] \n",
-    "    for i in range(numIter):\n",
-    "        w = logRegUpdate(w, x, y, learnRate)\n",
-    "        cost = logRegCost(w, x, y)\n",
-    "        costs.append(logRegCost(w, x, y))\n",
+    "    for i in range(numIters):\n",
+    "        cost = logAvgCost(X, y, w)\n",
+    "        w = updateWeightsGD(X, y, w, lr)\n",
     "        if i % logFreq == 0: \n",
-    "            print(\"Epoch:\", i, \"Cost:\", cost)\n",
-    "    return w, costs"
+    "            print(\"iter:\", i, \"cost:\", cost)\n",
+    "            costs.append(cost)\n",
+    "    return w, costs\n",
+    "\n",
+    "def trainGDMulticlass(X, y, lr, numIters, logFreq): \n",
+    "    uniqueYs = np.unique(y)\n",
+    "    ys = [] \n",
+    "    for uniqueY in uniqueYs: \n",
+    "        binaryYs = np.copy(y)\n",
+    "        binaryYs += 1 \n",
+    "        binaryYs[binaryYs != uniqueY + 1] = 0\n",
+    "        binaryYs[binaryYs == uniqueY + 1] = 1\n",
+    "        ys.append(binaryYs)\n",
+    "    ys = np.array(ys)\n",
+    "    ws = np.random.rand(uniqueYs.shape[0],\\\n",
+    "        X.shape[1],1)\n",
+    "    costs = []\n",
+    "    for i in range(numIters):\n",
+    "        cost = 0\n",
+    "        for uniqueY in uniqueYs: \n",
+    "            cost += logAvgCost(X, ys[uniqueY], ws[uniqueY])\n",
+    "            ws[uniqueY] = updateWeightsGD(X, ys[uniqueY],\\\n",
+    "                ws[uniqueY], lr)\n",
+    "        cost /= uniqueYs.shape[0]\n",
+    "        if i % logFreq == 0:\n",
+    "            print(\"iter:\", i, \"cost:\", cost)\n",
+    "            costs.append(cost)\n",
+    "    costs = np.array(costs)\n",
+    "    return ws, costs\n",
+    "\n",
+    "def logPredictMulticlass(X, w):\n",
+    "    predictions = [] \n",
+    "    for i in range(ws.shape[0]):\n",
+    "        predictions.append(logPredict(X,w[i]))\n",
+    "    predictions = np.array(predictions)\n",
+    "    return np.argmax(predictions,axis=0)\n",
+    "\n",
+    "def logMulticlassAccuracy(X, w, y):\n",
+    "    predictions = logPredictMulticlass(X, w)\n",
+    "    return np.sum(predictions == y) / y.shape[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 670,
+   "execution_count": 849,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 0.00000000e+00],\n",
-       "       [ 1.89704622e-02],\n",
-       "       [ 3.04656176e-01],\n",
-       "       [ 6.78367075e-01],\n",
-       "       [ 6.72874426e-01],\n",
-       "       [ 3.22573896e-01],\n",
-       "       [ 7.72237293e-02],\n",
-       "       [ 7.52399533e-03],\n",
-       "       [ 3.04447872e-04],\n",
-       "       [ 1.22438769e-01],\n",
-       "       [ 6.17014620e-01],\n",
-       "       [ 6.55696465e-01],\n",
-       "       [ 5.47080565e-01],\n",
-       "       [ 4.55110384e-01],\n",
-       "       [ 1.02967530e-01],\n",
-       "       [ 6.74123850e-03],\n",
-       "       [ 1.30440635e-04],\n",
-       "       [ 1.55206941e-01],\n",
-       "       [ 5.69696105e-01],\n",
-       "       [ 3.34554868e-01],\n",
-       "       [ 3.54997168e-01],\n",
-       "       [ 4.40868962e-01],\n",
-       "       [ 1.05092726e-01],\n",
-       "       [ 3.34891836e-03],\n",
-       "       [-1.49188438e-08],\n",
-       "       [ 1.38023253e-01],\n",
-       "       [ 5.07273547e-01],\n",
-       "       [ 4.62031385e-01],\n",
-       "       [ 5.35179528e-01],\n",
-       "       [ 4.29370663e-01],\n",
-       "       [ 1.42071700e-01],\n",
-       "       [ 1.30479617e-04],\n",
-       "       [ 0.00000000e+00],\n",
-       "       [ 1.37680217e-01],\n",
-       "       [ 4.32544016e-01],\n",
-       "       [ 4.88275151e-01],\n",
-       "       [ 5.52136068e-01],\n",
-       "       [ 5.12094988e-01],\n",
-       "       [ 1.80486264e-01],\n",
-       "       [ 0.00000000e+00],\n",
-       "       [ 4.78422378e-04],\n",
-       "       [ 9.56652112e-02],\n",
-       "       [ 3.90751581e-01],\n",
-       "       [ 3.78292108e-01],\n",
-       "       [ 3.86366081e-01],\n",
-       "       [ 4.74091824e-01],\n",
-       "       [ 2.16952994e-01],\n",
-       "       [ 1.82670686e-03],\n",
-       "       [ 5.21913771e-04],\n",
-       "       [ 4.30352800e-02],\n",
-       "       [ 4.31167078e-01],\n",
-       "       [ 5.17994990e-01],\n",
-       "       [ 4.90610623e-01],\n",
-       "       [ 4.92061895e-01],\n",
-       "       [ 2.17820617e-01],\n",
-       "       [ 8.35608714e-03],\n",
-       "       [ 4.34913040e-05],\n",
-       "       [ 1.73182556e-02],\n",
-       "       [ 3.28303492e-01],\n",
-       "       [ 6.91806211e-01],\n",
-       "       [ 6.52047482e-01],\n",
-       "       [ 3.71043051e-01],\n",
-       "       [ 1.11549252e-01],\n",
-       "       [ 1.35453683e-02]])"
-      ]
-     },
-     "execution_count": 670,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iter: 0 cost: 8.768279072857823\n",
+      "iter: 1 cost: 1.027191962525198\n",
+      "iter: 2 cost: 0.43375792370313143\n",
+      "iter: 3 cost: 0.35290558177127307\n",
+      "iter: 4 cost: 0.2990977129983059\n",
+      "iter: 5 cost: 0.2700331623513859\n",
+      "iter: 6 cost: 0.25444014072222493\n",
+      "iter: 7 cost: 0.24308356781952298\n",
+      "iter: 8 cost: 0.2331430435651038\n",
+      "iter: 9 cost: 0.22416311114243084\n",
+      "0.7916666666666666\n"
+     ]
     }
    ],
    "source": [
@@ -161,19 +131,12 @@
     "digYTrain = np.expand_dims(digYTrain, axis=1)\n",
     "digYTest = np.expand_dims(digYTest, axis=1)\n",
     "\n",
-    "ones = digYTrain\n",
-    "ones[ones != 1] = 0.0\n",
+    "# Stochastic Gradient Descent Training\n",
+    "ws, costs = trainGDMulticlass(digXTrain,\\\n",
+    "    digYTrain, 0.01, 10, 1)\n",
     "\n",
-    "# Initialize weights\n",
-    "w = np.random.rand(digXTrain.shape[1],1)\n",
-    "predict = 1.0 / (1.0 + np.exp(-np.dot(digXTrain,w)))\n",
-    "\n",
-    "cost = ones * np.log(predict) + (1.0 - ones) * np.log(1.0 - predict)\n",
-    "cost = - cost\n",
-    "cost.sum() / digYTrain.shape[0]\n",
-    "\n",
-    "gradient = np.dot(digXTrain.T, predict - digYTrain)\n",
-    "gradient / digYTrain.shape[0]"
+    "# Evaluation \n",
+    "print(logMulticlassAccuracy(digXTest, ws, digYTest))"
    ]
   }
  ],
