Fixed bug with learning rate.

--- a/Optimization.ipynb
+++ b/Optimization.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 840,
+   "execution_count": 905,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,9 +36,9 @@
     "    return np.dot(X.T, predict - y) / y.shape[0]\n",
     "\n",
     "def updateWeightsGD(X, y, w, lr):\n",
+    "    #print(lr)\n",
     "    gradient = logAvgGrad(X, y, w)\n",
-    "    step = lr * gradient \n",
-    "    return w - gradient \n",
+    "    return w - (lr * gradient)\n",
     "\n",
     "def trainGD(X, y, w, lr, numIters, logFreq):\n",
     "    costs = [] \n",
@@ -90,24 +90,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 849,
+   "execution_count": 915,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iter: 0 cost: 8.768279072857823\n",
-      "iter: 1 cost: 1.027191962525198\n",
-      "iter: 2 cost: 0.43375792370313143\n",
-      "iter: 3 cost: 0.35290558177127307\n",
-      "iter: 4 cost: 0.2990977129983059\n",
-      "iter: 5 cost: 0.2700331623513859\n",
-      "iter: 6 cost: 0.25444014072222493\n",
-      "iter: 7 cost: 0.24308356781952298\n",
-      "iter: 8 cost: 0.2331430435651038\n",
-      "iter: 9 cost: 0.22416311114243084\n",
-      "0.7916666666666666\n"
+      "iter: 0 cost: 8.818233509554672\n",
+      "iter: 100 cost: 0.21582293168274763\n",
+      "iter: 200 cost: 0.16110922930030078\n",
+      "iter: 300 cost: 0.13333284571935514\n",
+      "iter: 400 cost: 0.1162741819496678\n",
+      "iter: 500 cost: 0.10458768589538167\n",
+      "iter: 600 cost: 0.09600815664927623\n",
+      "iter: 700 cost: 0.08940162066563104\n",
+      "iter: 800 cost: 0.08413295792636287\n",
+      "iter: 900 cost: 0.07981685403854226\n",
+      "0.9194444444444444\n"
      ]
     }
    ],
@@ -133,7 +133,7 @@
     "\n",
     "# Stochastic Gradient Descent Training\n",
     "ws, costs = trainGDMulticlass(digXTrain,\\\n",
-    "    digYTrain, 0.01, 10, 1)\n",
+    "    digYTrain, 0.1, 1000, 100)\n",
     "\n",
     "# Evaluation \n",
     "print(logMulticlassAccuracy(digXTest, ws, digYTest))"
