Gradient Descent algorithm implemented.

--- a/Optimization.ipynb
+++ b/Optimization.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 905,
+   "execution_count": 976,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,32 +25,57 @@
     "def logPredict(X, w): \n",
     "    return sigmoid(np.dot(X,w))\n",
     "\n",
-    "def logAvgCost(X, y, w):\n",
+    "def logAvgCost(X, y, w, regularization=None, lmda=0):\n",
     "    predict = logPredict(X, w)\n",
     "    cost = y * np.log(predict) + (1.0 - y) * np.log(1.0 - predict)\n",
     "    cost = - cost \n",
-    "    return cost.sum() / y.shape[0]\n",
+    "    totalCost = cost.sum()\n",
+    "    if regularization == 'l1':\n",
+    "        totalCost += l1Cost(lmda, w)\n",
+    "    elif regularization == 'l2':\n",
+    "        totalCost += l2Cost(lmda, w)\n",
+    "    return totalCost / y.shape[0]\n",
     "\n",
-    "def logAvgGrad(X, y, w):\n",
+    "def l1Cost(lmda, w): \n",
+    "    return lmda * np.sum(np.abs(w))\n",
+    "\n",
+    "def l2Cost(lmda, w):\n",
+    "    return lmda * np.sum(np.square(w))\n",
+    "\n",
+    "def l1Grad(lmda, w):\n",
+    "    gradient = lmda * np.sign(w)\n",
+    "    zeros = np.array(np.where(gradient == 0)).T\n",
+    "    for zero in zeros:\n",
+    "        gradient[zero] = (2.0 * np.random.rand()) - 1.0\n",
+    "    return gradient\n",
+    "\n",
+    "def l2Grad(lmda, w): \n",
+    "    return lmda * 2 * w\n",
+    "\n",
+    "def logAvgGrad(X, y, w, regularization=None, lmda=0):\n",
     "    predict = logPredict(X, w)\n",
-    "    return np.dot(X.T, predict - y) / y.shape[0]\n",
+    "    gradient = np.dot(X.T, predict - y) \n",
+    "    if regularization == 'l1':\n",
+    "        gradient += l1Grad(lmda, w)\n",
+    "    elif regularization == 'l2':\n",
+    "        gradient += l2Grad(lmda, w)\n",
+    "    return gradient / y.shape[0]\n",
     "\n",
-    "def updateWeightsGD(X, y, w, lr):\n",
-    "    #print(lr)\n",
-    "    gradient = logAvgGrad(X, y, w)\n",
+    "def updateWeightsGD(X, y, w, lr, regularization=None, lmda=0):\n",
+    "    gradient = logAvgGrad(X, y, w, regularization, lmda)\n",
     "    return w - (lr * gradient)\n",
     "\n",
-    "def trainGD(X, y, w, lr, numIters, logFreq):\n",
+    "def trainGD(X, y, w, lr, numIters, logFreq, regularization=None, lmda=0):\n",
     "    costs = [] \n",
     "    for i in range(numIters):\n",
-    "        cost = logAvgCost(X, y, w)\n",
-    "        w = updateWeightsGD(X, y, w, lr)\n",
+    "        cost = logAvgCost(X, y, w, regularization, lmda)\n",
+    "        w = updateWeightsGD(X, y, w, lr, regularization, lmda)\n",
     "        if i % logFreq == 0: \n",
     "            print(\"iter:\", i, \"cost:\", cost)\n",
     "            costs.append(cost)\n",
     "    return w, costs\n",
     "\n",
-    "def trainGDMulticlass(X, y, lr, numIters, logFreq): \n",
+    "def trainGDMulticlass(X, y, lr, numIters, logFreq, regularization=None, lmda=0):\n",
     "    uniqueYs = np.unique(y)\n",
     "    ys = [] \n",
     "    for uniqueY in uniqueYs: \n",
@@ -66,9 +91,9 @@
     "    for i in range(numIters):\n",
     "        cost = 0\n",
     "        for uniqueY in uniqueYs: \n",
-    "            cost += logAvgCost(X, ys[uniqueY], ws[uniqueY])\n",
+    "            cost += logAvgCost(X, ys[uniqueY], ws[uniqueY], regularization, lmda)\n",
     "            ws[uniqueY] = updateWeightsGD(X, ys[uniqueY],\\\n",
-    "                ws[uniqueY], lr)\n",
+    "                ws[uniqueY], lr, regularization, lmda)\n",
     "        cost /= uniqueYs.shape[0]\n",
     "        if i % logFreq == 0:\n",
     "            print(\"iter:\", i, \"cost:\", cost)\n",
@@ -90,25 +115,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 915,
+   "execution_count": 997,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iter: 0 cost: 8.818233509554672\n",
-      "iter: 100 cost: 0.21582293168274763\n",
-      "iter: 200 cost: 0.16110922930030078\n",
-      "iter: 300 cost: 0.13333284571935514\n",
-      "iter: 400 cost: 0.1162741819496678\n",
-      "iter: 500 cost: 0.10458768589538167\n",
-      "iter: 600 cost: 0.09600815664927623\n",
-      "iter: 700 cost: 0.08940162066563104\n",
-      "iter: 800 cost: 0.08413295792636287\n",
-      "iter: 900 cost: 0.07981685403854226\n",
-      "0.9194444444444444\n"
+      "iter: 0 cost: 231.50170281415285\n",
+      "iter: 10 cost: 461.10421868424964\n",
+      "iter: 20 cost: 988.7473613220909\n",
+      "iter: 30 cost: 1395.5158953375028\n",
+      "iter: 40 cost: nan\n",
+      "iter: 50 cost: nan\n",
+      "iter: 60 cost: nan\n",
+      "iter: 70 cost: 1013.6369240204182\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ychen\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:9: RuntimeWarning: invalid value encountered in multiply\n",
+      "  if __name__ == '__main__':\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iter: 80 cost: 1111.0448224166678\n",
+      "iter: 90 cost: inf\n",
+      "Accuracy (Training): 0.07376478775226165\n",
+      "Accuracy (Test): 0.04722222222222222\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 231.50170281,  461.10421868,  988.74736132, 1395.51589534,\n",
+       "                 nan,           nan,           nan, 1013.63692402,\n",
+       "       1111.04482242,           inf])"
+      ]
+     },
+     "execution_count": 997,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -133,11 +185,23 @@
     "\n",
     "# Stochastic Gradient Descent Training\n",
     "ws, costs = trainGDMulticlass(digXTrain,\\\n",
-    "    digYTrain, 0.1, 1000, 100)\n",
+    "    digYTrain, 1, 100, 10, 'l1', 10000)\n",
     "\n",
     "# Evaluation \n",
-    "print(logMulticlassAccuracy(digXTest, ws, digYTest))"
+    "print(\"Accuracy (Training):\",\n",
+    "    logMulticlassAccuracy(digXTrain, ws, digYTrain))\n",
+    "print(\"Accuracy (Test):\",\\\n",
+    "    logMulticlassAccuracy(digXTest, ws, digYTest))\n",
+    "\n",
+    "costs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
