Slightly stuck on exponential multiplicative weights implementation.

--- a/Optimization.ipynb
+++ b/Optimization.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 976,
+   "execution_count": 1038,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,8 +65,9 @@
     "    gradient = logAvgGrad(X, y, w, regularization, lmda)\n",
     "    return w - (lr * gradient)\n",
     "\n",
-    "def trainGD(X, y, w, lr, numIters, logFreq, regularization=None, lmda=0):\n",
+    "def trainGD(X, y, lr, numIters, logFreq, regularization=None, lmda=0):\n",
     "    costs = [] \n",
+    "    w = np.random.rand(X.shape[1], 1)\n",
     "    for i in range(numIters):\n",
     "        cost = logAvgCost(X, y, w, regularization, lmda)\n",
     "        w = updateWeightsGD(X, y, w, lr, regularization, lmda)\n",
@@ -99,7 +100,52 @@
     "            print(\"iter:\", i, \"cost:\", cost)\n",
     "            costs.append(cost)\n",
     "    costs = np.array(costs)\n",
-    "    return ws, costs\n",
+    "    return ws, costs  \n",
+    "\n",
+    "def updateWeightsAdaGrad(X, y, w, lr, S, epsilon, regularization=None, lmda=0):\n",
+    "    gradient = logAvgGrad(X, y, w, regularization, lmda)\n",
+    "    S += np.square(gradient)\n",
+    "    multiplier = lr / np.sqrt(S + epsilon)\n",
+    "    return w - np.multiply(multiplier, gradient)\n",
+    "\n",
+    "def trainAdaGrad(X, y, lr, numIters, logFreq, epsilon, regularization=None, lmda=0):\n",
+    "    costs = [] \n",
+    "    w = np.random.rand(X.shape[1], 1)\n",
+    "    S = np.zeros((X.shape[1], 1))\n",
+    "    for i in range(numIters):\n",
+    "        cost = logAvgCost(X, y, w, regularization, lmda)\n",
+    "        w = updateWeightsAdaGrad(X, y, w, lr, S, epsilon, regularization, lmda)\n",
+    "        if i % logFreq == 0: \n",
+    "            print(\"iter:\", i, \"cost:\", cost)\n",
+    "            costs.append(cost)\n",
+    "    return w, costs\n",
+    "\n",
+    "def trainAdaGradMulticlass(X, y, lr, numIters, logFreq, epsilon, regularization=None, lmda=0):\n",
+    "    uniqueYs = np.unique(y)\n",
+    "    ys = [] \n",
+    "    for uniqueY in uniqueYs: \n",
+    "        binaryYs = np.copy(y)\n",
+    "        binaryYs += 1 \n",
+    "        binaryYs[binaryYs != uniqueY + 1] = 0\n",
+    "        binaryYs[binaryYs == uniqueY + 1] = 1\n",
+    "        ys.append(binaryYs)\n",
+    "    ys = np.array(ys)\n",
+    "    ws = np.random.rand(uniqueYs.shape[0],\\\n",
+    "        X.shape[1],1)\n",
+    "    Ss = np.zeros((uniqueYs.shape[0], X.shape[1], 1))\n",
+    "    costs = []\n",
+    "    for i in range(numIters):\n",
+    "        cost = 0\n",
+    "        for uniqueY in uniqueYs: \n",
+    "            cost += logAvgCost(X, ys[uniqueY], ws[uniqueY], regularization, lmda)\n",
+    "            ws[uniqueY] = updateWeightsAdaGrad(X, ys[uniqueY],\\\n",
+    "                ws[uniqueY], lr, Ss[uniqueY], epsilon, regularization, lmda)\n",
+    "        cost /= uniqueYs.shape[0]\n",
+    "        if i % logFreq == 0:\n",
+    "            print(\"iter:\", i, \"cost:\", cost)\n",
+    "            costs.append(cost)\n",
+    "    costs = np.array(costs)\n",
+    "    return ws, costs  \n",
     "\n",
     "def logPredictMulticlass(X, w):\n",
     "    predictions = [] \n",
@@ -115,54 +161,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 997,
+   "execution_count": 1041,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "iter: 0 cost: 231.50170281415285\n",
-      "iter: 10 cost: 461.10421868424964\n",
-      "iter: 20 cost: 988.7473613220909\n",
-      "iter: 30 cost: 1395.5158953375028\n",
-      "iter: 40 cost: nan\n",
-      "iter: 50 cost: nan\n",
-      "iter: 60 cost: nan\n",
-      "iter: 70 cost: 1013.6369240204182\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ychen\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:9: RuntimeWarning: invalid value encountered in multiply\n",
-      "  if __name__ == '__main__':\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "iter: 80 cost: 1111.0448224166678\n",
-      "iter: 90 cost: inf\n",
-      "Accuracy (Training): 0.07376478775226165\n",
-      "Accuracy (Test): 0.04722222222222222\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([ 231.50170281,  461.10421868,  988.74736132, 1395.51589534,\n",
-       "                 nan,           nan,           nan, 1013.63692402,\n",
-       "       1111.04482242,           inf])"
-      ]
-     },
-     "execution_count": 997,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load dataset\n",
     "digits = load_digits()\n",
@@ -181,27 +182,124 @@
     "\n",
     "# Ensure dimensionality matches \n",
     "digYTrain = np.expand_dims(digYTrain, axis=1)\n",
-    "digYTest = np.expand_dims(digYTest, axis=1)\n",
-    "\n",
-    "# Stochastic Gradient Descent Training\n",
+    "digYTest = np.expand_dims(digYTest, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1042,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iter: 0 cost: 8.94303458781355\n",
+      "iter: 100 cost: 0.08042876444810285\n",
+      "iter: 200 cost: 0.06197694728237085\n",
+      "iter: 300 cost: 0.05422466309170197\n",
+      "iter: 400 cost: 0.04970070866948016\n",
+      "iter: 500 cost: 0.04664201732163131\n",
+      "iter: 600 cost: 0.044384828955270905\n",
+      "iter: 700 cost: 0.04262385335638737\n",
+      "iter: 800 cost: 0.04119899910894402\n",
+      "iter: 900 cost: 0.040013617534999726\n",
+      "Accuracy (Training): 0.9742519137091162\n",
+      "Accuracy (Test): 0.9555555555555556\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Gradient Descent Training\n",
     "ws, costs = trainGDMulticlass(digXTrain,\\\n",
-    "    digYTrain, 1, 100, 10, 'l1', 10000)\n",
+    "    digYTrain, 1, 1000, 100, 'l1', 0.1)\n",
     "\n",
     "# Evaluation \n",
     "print(\"Accuracy (Training):\",\n",
     "    logMulticlassAccuracy(digXTrain, ws, digYTrain))\n",
     "print(\"Accuracy (Test):\",\\\n",
-    "    logMulticlassAccuracy(digXTest, ws, digYTest))\n",
-    "\n",
-    "costs"
+    "    logMulticlassAccuracy(digXTest, ws, digYTest))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1039,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iter: 0 cost: 8.86025922751747\n",
+      "iter: 100 cost: 0.054348073185216825\n",
+      "iter: 200 cost: 0.04413316403089415\n",
+      "iter: 300 cost: 0.03965000904061437\n",
+      "iter: 400 cost: 0.03695312932698065\n",
+      "iter: 500 cost: 0.03510365271266992\n",
+      "iter: 600 cost: 0.03373364361369241\n",
+      "iter: 700 cost: 0.032667493011929026\n",
+      "iter: 800 cost: 0.031812318658794844\n",
+      "iter: 900 cost: 0.03110669927362718\n",
+      "Accuracy (Training): 0.9832985386221295\n",
+      "Accuracy (Test): 0.9555555555555556\n"
+     ]
+    }
+   ],
+   "source": [
+    "# AdaGrad Training \n",
+    "ws, costs = trainAdaGradMulticlass(digXTrain,\\\n",
+    "    digYTrain, 1, 1000, 100, 1e-8, 'l1', 0.1)\n",
+    "\n",
+    "# Evaluation \n",
+    "print(\"Accuracy (Training):\",\n",
+    "    logMulticlassAccuracy(digXTrain, ws, digYTrain))\n",
+    "print(\"Accuracy (Test):\",\\\n",
+    "    logMulticlassAccuracy(digXTest, ws, digYTest))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iter: 0 cost: 10.370376093231787\n",
+      "iter: 199 cost: 0.3799373796259797\n",
+      "iter: 0 cost: 8.133770727483085\n",
+      "iter: 199 cost: 0.3893224336801635\n",
+      "Iteration: 0 Cost: 0.38359718457608266\n",
+      "Iteration: 500 Cost: 0.38359718457608266\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exponential Multiplicative Weights \n",
+    "# Experts: 10 Weak Classifiers  \n",
+    "numExperts = 2\n",
+    "ones = np.copy(digYTrain)\n",
+    "ones[ones != 1] = 0\n",
+    "experts = []\n",
+    "for i in range(numExperts):\n",
+    "    expert, _ = trainGD(digXTrain, ones, 0.01, 200, 199)\n",
+    "    experts.append(expert)\n",
+    "experts = np.array(experts)\n",
+    "w = np.ones((experts.shape[0], 1))\n",
+    "lr = 0.01\n",
+    "\n",
+    "numIters = 1000 \n",
+    "logFreq = 500\n",
+    "for i in range(numIters):\n",
+    "    totLoss = 0 \n",
+    "    for j in range(experts.shape[0]): \n",
+    "        loss = logAvgCost(digXTrain, ones, experts[j])\n",
+    "        totLoss += loss\n",
+    "        w[j] *= np.exp(- lr * loss)\n",
+    "    if i % logFreq == 0: \n",
+    "        print(\"Iteration:\", i,\"Cost:\", totLoss / experts.shape[0])\n"
+   ]
   }
  ],
  "metadata": {
