Preprocessing for NLP dataset complete.

--- a/Optimization.ipynb
+++ b/Optimization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,21 @@
     "import matplotlib.pyplot as plt \n",
     "from sklearn.datasets import load_digits \n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "import pandas as pd\n",
+    "import string\n",
+    "import re \n",
+    "import nltk \n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1038,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,10 +170,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1041,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# MNIST\n",
     "# Load dataset\n",
     "digits = load_digits()\n",
     "digX = digits.images \n",
@@ -187,25 +197,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1042,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iter: 0 cost: 8.94303458781355\n",
-      "iter: 100 cost: 0.08042876444810285\n",
-      "iter: 200 cost: 0.06197694728237085\n",
-      "iter: 300 cost: 0.05422466309170197\n",
-      "iter: 400 cost: 0.04970070866948016\n",
-      "iter: 500 cost: 0.04664201732163131\n",
-      "iter: 600 cost: 0.044384828955270905\n",
-      "iter: 700 cost: 0.04262385335638737\n",
-      "iter: 800 cost: 0.04119899910894402\n",
-      "iter: 900 cost: 0.040013617534999726\n",
-      "Accuracy (Training): 0.9742519137091162\n",
-      "Accuracy (Test): 0.9555555555555556\n"
+      "iter: 0 cost: 9.171039675266258\n",
+      "iter: 100 cost: 0.0780419604743979\n",
+      "iter: 200 cost: 0.059681815843701816\n",
+      "iter: 300 cost: 0.05203538584802823\n",
+      "iter: 400 cost: 0.04761466811195066\n",
+      "iter: 500 cost: 0.04464678293552123\n",
+      "iter: 600 cost: 0.04247749907692624\n",
+      "iter: 700 cost: 0.04080040349360599\n",
+      "iter: 800 cost: 0.03945171188530569\n",
+      "iter: 900 cost: 0.03833619130635034\n",
+      "Accuracy (Training): 0.97633959638135\n",
+      "Accuracy (Test): 0.95\n"
      ]
     }
    ],
@@ -223,25 +233,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1039,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iter: 0 cost: 8.86025922751747\n",
-      "iter: 100 cost: 0.054348073185216825\n",
-      "iter: 200 cost: 0.04413316403089415\n",
-      "iter: 300 cost: 0.03965000904061437\n",
-      "iter: 400 cost: 0.03695312932698065\n",
-      "iter: 500 cost: 0.03510365271266992\n",
-      "iter: 600 cost: 0.03373364361369241\n",
-      "iter: 700 cost: 0.032667493011929026\n",
-      "iter: 800 cost: 0.031812318658794844\n",
-      "iter: 900 cost: 0.03110669927362718\n",
-      "Accuracy (Training): 0.9832985386221295\n",
-      "Accuracy (Test): 0.9555555555555556\n"
+      "iter: 0 cost: 8.854384281421028\n",
+      "iter: 100 cost: 0.05260605045081612\n",
+      "iter: 200 cost: 0.04265014119521066\n",
+      "iter: 300 cost: 0.03833243396120719\n",
+      "iter: 400 cost: 0.03577810068697231\n",
+      "iter: 500 cost: 0.034046193080419576\n",
+      "iter: 600 cost: 0.03278032242059598\n",
+      "iter: 700 cost: 0.03180727542773276\n",
+      "iter: 800 cost: 0.03103504109167335\n",
+      "iter: 900 cost: 0.030402170707007153\n",
+      "Accuracy (Training): 0.9860821155184412\n",
+      "Accuracy (Test): 0.9583333333333334\n"
      ]
     }
    ],
@@ -259,47 +269,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1110,
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sentiment classification  \n",
+    "# on the Twitter US Airline Sentiment Dataset \n",
+    "tweets = pd.read_csv('./Tweets.csv', sep=',')\n",
+    "\n",
+    "# Process labels \n",
+    "yRaw = np.array(tweets['airline_sentiment'])\n",
+    "y = np.zeros(yRaw.shape)\n",
+    "# Convert y categories into numerical values \n",
+    "y[yRaw == 'negative'] = 0 \n",
+    "y[yRaw == 'neutral'] = 1\n",
+    "y[yRaw == 'positive'] = 2\n",
+    "y = np.expand_dims(y, axis=1)\n",
+    "\n",
+    "# Clean text \n",
+    "XRaw = tweets['text'].tolist()\n",
+    "XCleaned = []\n",
+    "for i in range(len(XRaw)):\n",
+    "    rawText = XRaw[i]\n",
+    "    # Set all lower case\n",
+    "    processed = rawText.lower()\n",
+    "    # Remove twitter tags \n",
+    "    processed = \" \".join(filter(lambda x:x[0] !='@', processed.split()))\n",
+    "    # Remove numbers \n",
+    "    processed = re.sub(r'\\d+','',processed)\n",
+    "    # Remove punctuation\n",
+    "    processed = processed.translate(str.maketrans(\"\",\"\", string.punctuation))\n",
+    "    # Remove whitespaces \n",
+    "    processed = processed.strip()\n",
+    "    XCleaned.append(processed)\n",
+    "\n",
+    "# Use the top 500 most frequently appearing \n",
+    "# words for classification\n",
+    "# Bag of words approach: \n",
+    "vectorizer = CountVectorizer(max_features=500)\n",
+    "XCounts = vectorizer.fit_transform(XCleaned)\n",
+    "# tf-idf: term frequency-inverse document frequency \n",
+    "tfTransformer = TfidfTransformer()\n",
+    "X = tfTransformer.fit_transform(XCounts)\n",
+    "X = X.toarray()\n",
+    "\n",
+    "# Our method of vectorizing text input from scratch\n",
+    "# Assume cleaned input (no punctuation, same case, etc.)\n",
+    "def vectorizeText(XCleaned):\n",
+    "    # Tokenize text \n",
+    "    XTokenized = [] \n",
+    "    stopWords = stopwords.words('english')\n",
+    "    wordnetLemmatizer = WordNetLemmatizer()\n",
+    "    for i in range(len(XCleaned)):\n",
+    "        tokens = nltk.word_tokenize(XCleaned[i])\n",
+    "        # Remove stop words \n",
+    "        tokens = [j for j in tokens if not j in stopWords]\n",
+    "        # Lemmatize \n",
+    "        tokens = [wordnetLemmatizer.lemmatize(word) for word in tokens]\n",
+    "        XTokenized.append(tokens)\n",
+    "\n",
+    "    allTokens = [token for sublist in XTokenized for token in sublist]\n",
+    "    allTokens = np.array(allTokens)\n",
+    "    unique, count = np.unique(allTokens, return_counts=True)\n",
+    "    count, unique = zip(*sorted(zip(count, unique)))\n",
+    "\n",
+    "    # Number of features to consider \n",
+    "    nFeatures = 500\n",
+    "    textFeatures = unique[len(unique)-nFeatures:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "iter: 0 cost: 10.370376093231787\n",
-      "iter: 199 cost: 0.3799373796259797\n",
-      "iter: 0 cost: 8.133770727483085\n",
-      "iter: 199 cost: 0.3893224336801635\n",
-      "Iteration: 0 Cost: 0.38359718457608266\n",
-      "Iteration: 500 Cost: 0.38359718457608266\n"
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'toarray'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-119-127bd799ee5d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtoarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'toarray'"
      ]
     }
    ],
-   "source": [
-    "# Exponential Multiplicative Weights \n",
-    "# Experts: 10 Weak Classifiers  \n",
-    "numExperts = 2\n",
-    "ones = np.copy(digYTrain)\n",
-    "ones[ones != 1] = 0\n",
-    "experts = []\n",
-    "for i in range(numExperts):\n",
-    "    expert, _ = trainGD(digXTrain, ones, 0.01, 200, 199)\n",
-    "    experts.append(expert)\n",
-    "experts = np.array(experts)\n",
-    "w = np.ones((experts.shape[0], 1))\n",
-    "lr = 0.01\n",
-    "\n",
-    "numIters = 1000 \n",
-    "logFreq = 500\n",
-    "for i in range(numIters):\n",
-    "    totLoss = 0 \n",
-    "    for j in range(experts.shape[0]): \n",
-    "        loss = logAvgCost(digXTrain, ones, experts[j])\n",
-    "        totLoss += loss\n",
-    "        w[j] *= np.exp(- lr * loss)\n",
-    "    if i % logFreq == 0: \n",
-    "        print(\"Iteration:\", i,\"Cost:\", totLoss / experts.shape[0])\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
